src/objects/smagicinteract__LV_MMS_Detail__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__List_View_Configuration__c</fullName>
        <label>List View Configuration</label>
        <referenceTo>smagicinteract__List_View_Configuration__c</referenceTo>
        <relationshipLabel>LV MMS Details</relationshipLabel>
        <relationshipName>LV_MMS_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>smagicinteract__MMS_Type__c</fullName>
        <label>MMS Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__MMS_Url__c</fullName>
        <label>MMS Url</label>
        <type>Url</type>
    </fields>
    <label>LV MMS Detail</label>
    <nameField>
        <label>LV MMS Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV MMS Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>